Styles for services and team section

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,10 @@
 @import 'scss/_variables.scss';
 @import 'scss/_default.scss';
 @import 'scss/_mixins.scss';
+@import 'scss/_scrollToTop.scss';
 @import 'scss/_header.scss';
 @import 'scss/_slider.scss';
 @import 'scss/_about.scss';
+@import 'scss/_services.scss';
+@import 'scss/_comments.scss';
 
