--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -23,11 +23,12 @@
         position: relative;
         box-shadow: 5px 5px 25px $light-gray;
         &:hover {
-            border:0;
             .services__overlay{
                 top:0;
                 height: 100%;
+                transform: rotate(360deg);
             }
+
         }
     }
     &__overlay{
@@ -35,33 +36,37 @@
         top:100%;
         left:0;
         right: 0;
-        background: rgba(255,213,205,.5);
+        background: rgba(255,213,205,.9);
         overflow:hidden;
         width: 100%;
         height: 0;
         transition: .6s ease;
+        i{
+            transition: .6s;
+            &:hover{
+                transform: scale(1.5);
+                box-shadow: 3px 3px 10px rgba(0,0,0,.3);
+            }
+        }
     }
-    &__overlay2{
-        position: absolute;
-        top:100%;
-        left:0;
-        right: 0;
-        background: rgba(255,213,205,1);
-        overflow:hidden;
-        width: 100%;
-        height: 0;
-        transition: .6s ease;
+    &__insta {
+        color: #F77737!important;
     }
+
 
     &__overlay-text{
         color:$black;
         font-size: 1.5rem;
         font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
         position: absolute;
         top:50%;
         left:50%;
         transform: translate(-50%,-50%);
         text-align: center;
+
+
+
     }
     &__contact-btn{
         position: absolute;
@@ -73,3 +78,5 @@
 
     }
 }
+
+
