Imported styles in SASS

--- a/style.scss
+++ b/style.scss
@@ -7,4 +7,6 @@
 @import 'scss/_about.scss';
 @import 'scss/_services.scss';
 @import 'scss/_comments.scss';
+@import 'scss/_pricing.scss';
+@import 'scss/_contact.scss';
 
