--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,7 +1,64 @@
 .contact {
-    &__map {
-        width: 100%;
-        height: 400px;
-        background-color: $light-gray;
+    h2 {
+        font-family: 'Montserrat';
     }
+    p{
+        color:$light-gray;
+    }
+    &__form-control{
+        margin-bottom: 20px;
+        position: relative;
+        input,textarea {
+            padding: 6px;
+            border:1px solid #dadada;
+            width: 100%;
+            border-radius: 5px;
+        }
+
+        small {
+            visibility: hidden;
+        }
+            &--error  {
+                position: relative;
+                margin-bottom: 20px;
+                input,textarea {
+                border-color:#e74c3c;
+                }
+                small {
+                    visibility: visible;
+                    color:#e74c3c;
+                    position: absolute;
+                    bottom:10px;
+                    right:10px;
+                }
+            }
+            &--success {
+                textarea{
+                border-color:#2ecc71;
+
+                }
+                input{
+                border-color:#2ecc71;
+
+                }
+            }
+    }
+    &__form-input{
+        padding: 6px;
+        border:1px solid #2b2a2a;
+        width: 100%;
+        border-radius: 5px;
+
+    }
+    &__btn{
+        width: 100%;
+        border-radius: 10px;
+        padding: 10px;
+        background: $primary;
+    }
+
 }
+input, input:focus, textarea, textarea:focus {
+    outline-color: #dadada;
+}
+
