--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @import 'scss/_variables.scss';
 @import 'scss/_default.scss';
 @import 'scss/_mixins.scss';
+@import 'scss/_preloader.scss';
 @import 'scss/_scrollToTop.scss';
 @import 'scss/_header.scss';
 @import 'scss/_slider.scss';
